--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
 </head>
 <body>
     <h1>Datos</h1>
-    <p>Facundo</p>
-    <p>Figun</p>
-    <p>facundofigun54@gmail.com</p>
-    <p>44.623.314</p>
+
+    <table>
+        <tr>
+            <td>Alumno: <p>Facundo Figun</p></td>
+            <td>Correo: <p>facundofigun54@gmail.com</p></td>
+            <td>DNI: <p>44.623.314</p></td>
+        </tr>
+    </table>
     
 </body>
 </html>
